# AAR6

./: .gitignore  README.md
Robot_controller/: CMakeLists.txt
Robot_controller /urdf_standalone/collision_checker/: CMakeLists.txt
Robot_controller /urdf_standalone/collision_checker/examples/: test_collision_checker.cpp
Robot_controller /urdf_standalone/collision_checker/src/: CollisionChecker.cpp  GroundTruthGenerator.cpp
Robot_controller /urdf_standalone/kinematics/: CMakeLists.txt
Robot_controller /urdf_standalone/kinematics/include/kinematics/: ForwardKinematics.h
Robot_controller /urdf_standalone/kinematics/src/: ForwardKinematics.cpp
Robot_controller/collision_checker/: CMakeLists.txt
Robot_controller/collision_checker/include/collision_checker/: CollisionChecker.h  GroundTruthGenerator.h
Robot_controller/collision_checker/src/: CollisionChecker.cpp
Robot_controller/control/: CMakeLists.txt
Robot_controller/control/include/control/: RealTimeController.h
Robot_controller/control/src/: RealTimeController.cpp
Robot_controller/examples/: extract_link_positions.cpp  ik_convergence_test.cpp  ik_example.cpp  main.cpp  test_eaik_solver.cpp  test_velocity_controller.cpp
Robot_controller/kinematics/include/kinematics/: ForwardKinematics.h  InverseKinematics.h  SafetyLimiter.h  SqpIK.h  VelocityIK.h
Robot_controller/kinematics/src/: SqpIK.cpp  TrajectoryGenerator.cpp
Robot_controller/resources/aar6/mesh_cache/: 7807283397246310477.bvhcache
Robot_controller/resources/aar6/meshes/: L6.dae  fin.dae
Robot_controller/resources/aar6/meshes/L6_component/meshes/: mesh001.mesh  mesh003.mesh  mesh005.mesh  mesh006.mesh  mesh007.mesh  mesh011.mesh  mesh012.mesh  mesh016.mesh  mesh017.mesh  mesh019.mesh  mesh020.mesh  mesh021.mesh  mesh023.mesh  mesh026.mesh  mesh029.mesh  mesh030.mesh  mesh031.mesh  mesh032.mesh  mesh034.mesh  mesh036.mesh  mesh039.mesh  mesh040.mesh  mesh041.mesh  mesh042.mesh  mesh043.mesh  mesh045.mesh  mesh046.mesh  mesh047.mesh  mesh048.mesh  mesh050.mesh  mesh053.mesh  mesh055.mesh  mesh058.mesh  mesh059.mesh  mesh060.mesh  mesh061.mesh  mesh062.mesh  mesh064.mesh  mesh066.mesh  mesh068.mesh  (+141 more)
Robot_controller/resources/aar6/meshes_converted/: L1.mesh  L3.mesh  L4.mesh  L6.mesh  fin.mesh
Robot_controller/resources/aar6/urdf/: aar6.urdf
Robot_controller/resources/aar6/urdf/aar6_ee_changed/: aar6_ee_changed.usd
Robot_controller/resources/aar6/urdf/aar6_ee_changed/configuration/: aar6_ee_changed_physics.usd
Robot_controller/robot_model/: CMakeLists.txt
Robot_controller/robot_model/src/: RobotModel.cpp
Robot_controller/visualization/qml/components/: GlassPanel.qml  StyledButton.qml
Robot_controller/visualization/qml/tabs/: SettingsTab.qml
Robot_controller/visualization/qml/utils/: MathUtils.js
Robot_controller/visualization/resources/3d/: falt_touros.stl
Robot_controller/visualization/src/: AppState.cpp  AppState.h  CollisionWrapper.cpp  MotionController.cpp  MotionPlannerModel.cpp  MotionPlannerModel.h  RobotManager.cpp  RobotManager.h  RobotNode.h  main.cpp
Robot_ros2_ws/src/moveit/config/: moveit.rviz  ros2_controllers.yaml
control_board/v1/: #auto_saved_files#  _autosave-v1.kicad_sch
documentation/: main.aux  main.out  main.tex  main.toc  system_architecture.dot
mcu_firmware/: .gitignore  .mxproject  MIcrorosb Debug.launch  MIcrorosb.ioc  MIcrorosb.txt
mcu_firmware/App/config/: joint_config.c  limit_it_config.c  scurve_timer_isr.c  step_timer_it_config.c
mcu_firmware/App/config/include/: Driver_config.h  joint_config.h
mcu_firmware/App/drivers/: Motor_Driver_control.c  Motor_control.c  scurve_engine.c
mcu_firmware/App/drivers/includes/: Motor_Driver_control.h  Motor_control.h
mcu_firmware/App/includes/: constants.h  scurve_engine.h  structs.h
mcu_firmware/App/tasks/: driver_task.c  motorcontrol_task.c  motorcontrol_tasklqr.c  sensorsread_task.c  sensorsread_task_working_normal.c  uart_task.c
mcu_firmware/App/tasks/include/: motorcontrol_task.h  sensorsread_task.h  uart_task.h
mcu_firmware/Core/Inc/: FreeRTOSConfig.h  dma_transport.h  main.h  stm32f4xx_it.h  tim.h
mcu_firmware/Core/Src/: dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  syscalls.c  tim.c  usart.c
robot_controller/: .gitignore
robot_controller/examples/: fk_example.cpp  ik_test.cpp
robot_controller/kinematics/: CMakeLists.txt
robot_controller/kinematics/include/kinematics/: PositionIK.h
robot_controller/resources/aar6/mesh_cache/: 6125388811959046742.bvhcache
robot_controller/resources/aar6/meshes/: wodeen_base.dae
robot_controller/resources/aar6/meshes_converted/: L2.mesh  L5.mesh
robot_controller/resources/aar6/urdf/: aar6_ee_changed.urdf
robot_controller/robot_model/include/robot_model/: RobotModel.h
robot_controller/visualization/: CMakeLists.txt
robot_controller/visualization/qml/: minimal_test.qml
robot_controller/visualization/qml/components/: JointGraph.qml  PanelHeader.qml  ValueDisplay.qml
robot_controller/visualization/qml/tabs/: DriverSettingsTab.qml
robot_controller/visualization/resources/3d/: Falt_touros.qml
robot_controller/visualization/resources/3d/meshes/: node.mesh
robot_controller/visualization/src/: MotionController.h  RobotNode.cpp
urdf_standalone/collision_checker/examples/: test_collision_checker.cpp
urdf_standalone/collision_checker/src/: GroundTruthGenerator.cpp
urdf_standalone/examples/: CMakeLists.txt  dh_visual_test.cpp  fk_comparison_test.cpp
urdf_standalone/kinematics/include/kinematics/: ScrewMotionController.h  TrajectoryGenerator.h
urdf_standalone/kinematics/src/: ForwardKinematics.cpp  InverseKinematics.cpp  PositionIK.cpp  SafetyLimiter.cpp  VelocityIK.cpp
urdf_standalone/resources/aar6/mesh_cache/: 1187950112559726161.bvhcache  3855166209358123053.bvhcache  8231280327463085392.bvhcache
urdf_standalone/resources/aar6/meshes/: Gripper_Body.STL
urdf_standalone/test/: serial_test.py
urdf_standalone/visualization/qml/: main.qml  test.qml
urdf_standalone/visualization/src/: CollisionWrapper.h  robot_serial.cpp  robot_serial.h
(+180 files in other folders)
